@@ -1,3 +1,14 @@
+2003-11-19  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Ken.
+
+	- fixed 3490086 - support http post for XMLHttpRequest
+	
+        * kwq/KWQKJobClasses.h:
+        * kwq/KWQKJobClasses.mm:
+        (KIO::TransferJobPrivate::TransferJobPrivate):
+        (KIO::TransferJob::TransferJob):
+
 2003-11-20  Richard Williamson   <rjw@apple.com>
 
 	Cleaned up synchronous applet lookup and initialization.
